--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,11 +7,19 @@
                 <div class="card-body">
                     <% if(error.length > 0){ %><div class="alert alert-danger"><%= error %></div><% } %>
                     <% if(typeof success !== 'undefined' && success.length > 0){ %><div class="alert alert-success"><%= success %></div><% } %>
-                    <form action="/auth/login" method="POST">
-                        <div class="mb-3"><label>Username</label><input type="text" name="username" class="form-control" required></div>
-                        <div class="mb-3"><label>Password</label><input type="password" name="password" class="form-control" required></div>
+                    
+                    <form action="/auth/login" method="POST" autocomplete="off">
+                        <div class="mb-3">
+                            <label>Username</label>
+                            <input type="text" name="username" class="form-control" required autocomplete="off">
+                        </div>
+                        <div class="mb-3">
+                            <label>Password</label>
+                            <input type="password" name="password" class="form-control" required autocomplete="new-password">
+                        </div>
                         <button class="btn btn-primary w-100">Login</button>
                     </form>
+                    
                     <div class="text-center mt-3"><a href="/auth/register">Belum punya akun? Daftar</a></div>
                 </div>
             </div>
